[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["bkutasi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.87"
console_log = "0.2"

[dependencies.console_error_panic_hook]
version = "0.1.6"

[dependencies.web-sys]
version = "0.3.51"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Window",
    "Performance"
]
[lib]
crate-type = ["cdylib", "rlib"]
